# ZcChat

./: CMakeLists.txt  README.md  README_EN.md  galgamedialog.cpp  galgamedialog.h  galgamedialog.ui  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  tachie.cpp  tachie.h  tachie.ui  vad.cpp  vad.h
.github/ISSUE_TEMPLATE/: bug报告.md  feature_request.md  使用上的帮助.md  功能建议.md  功能要求.md
.github/workflows/: CloseInactiveIssues  CloseInactiveIssues.yml
dialog/: messagewindow.cpp  messagewindow.h  messagewindow.ui
galgamedialog_uichild/: history.cpp  history.h  history.ui  historychild.cpp  historychild.h  historychild.ui
lib/: elawidgettools.lib
mianwindow_uichild/: about.cpp  about.h  about.ui  setting_actor.cpp  setting_actor.h  setting_actor.ui  setting_actor_interface.cpp  setting_actor_interface.h  setting_actor_interface.ui  setting_actor_tachie.cpp  setting_actor_tachie.h  setting_actor_tachie.ui  setting_actor_tachie_listchild.cpp  setting_actor_tachie_listchild.h  setting_actor_tachie_listchild.ui  setting_ai.cpp  setting_ai.h  setting_ai.ui  setting_general.cpp  setting_general.h  setting_general.ui  setting_vits.cpp  setting_vits.h  setting_vits.ui  setting_voiceinput.cpp  setting_voiceinput.h  setting_voiceinput.ui
translations/: en_US.qm  en_US.ts  ja_JP.qm  ja_JP.ts  zh_CN.ts  zh_TW.qm  zh_TW.ts
utils/: createwin.cpp  createwin.h  log.h  vad.cpp  vad.h
